2005-08-28  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/nancy_bot/msgdata.cpp:
	(MsgData::getCommonMsg): Temporary workaround to fix the SIGFPE caused
	by division by zero.

2005-08-27  Chia I Wu  <b90201047@ntu.edu.tw>

	* src/core/font.cpp (CFont::RecalculateMetrics):
	Recalculate metrics only when face is scalable. Reported by
	wilkins@ptt.

2005-08-25  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/mainframe.cpp,
	po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po: Little fix.

2005-08-25  Youchen Lee  <youchen.lee@gmail.com>

	* src/mainframe.cpp,
	po/pcmanx.pot,
	po/zh_TW.po,
	po/zh_CN.po: Added zh_CN translator Optical-dlz.

2005-08-25  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* configure.ac:
	Temporarily disable --enable-script option in the configure script.
	Bump release version to 0.3.2.

2005-08-23  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/script/script.cpp:
	Change char* parameters to const char* since these strings are not 
	modified in these functions.

2005-08-23  Youchen Lee  <youchen.lee@gmail.com>
	
	* src/nancy_bot/nancybot.cpp: Fixed an unexpected semicolon in
	NancyBot::askNancy().

2005-08-23  Youchen Lee  <youchen.lee@gmail.com>

	* src/Makefile.am,
	data/Makefile.am,
	src/nancy_bot/botutil.h,
	data/nancy_bot/default_usages.data,
	data/nancy_bot/example_usages.data: Divided utils for Nancy:
	replaceString() and trim(). Added data files for
	USE_USER_DEFINED_USAGES .

	* src/nancy_bot/api.h,
	src/nancy_bot/msgdata.cpp,
	src/nancy_bot/msgdata.h,
	src/nancy_bot/nancybot.cpp: Added two functions
	MsgData::initUserDefinedUsages() and MsgData::getUserDefinedUsages().
	Replaced char with unsigned char. Several bugs fixed.


2005-08-23  Youchen Lee  <youchen.lee@gmail.com>

	* src/nancy_bot/msgdata.cpp,
	src/nancy_bot/nancybot.cpp,
	src/nancy_bot/msgdata.h,
	src/nancy_bot/api.h:
	Fixed that bot add all replies to unknow messages.
	Add "xxx = yyy" teaching. (#define TEACH_BOT).

2005-08-22  Youchen Lee  <youchen.lee@gmail.com>
